# rvc

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.devcontainer/: devcontainer.json
rvc/: __main__.py  dataset.py  rmvpe.py  utils.py
rvc/model/: attentions.py  commons.py  models.py  modules.py
rvc/rmvpe/: constants.py  deepunet.py  model.py  seq.py
scripts/: convert_fairseq_wav2vec.py  export_rvc_project.py
src/rvc/: __main__.py  dataset.py  pipeline.py  rmvpe.py  utils.py
src/rvc/core/: cli.py
src/rvc/model/: attentions.py  commons.py  losses.py  models.py  modules.py  rmvpe.py  transforms.py
src/rvc/model/hifigan/: losses.py  models.py  modules.py  utils.py
src/rvc/model/vits/: attentions.py  commons.py  losses.py  models.py  modules.py
src/rvc/pipeline/: dataset.py  finetune.py  index.py  inference.py  preprocess.py
