[project]
name = "rvc"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.9.0.post1",
    "ffmpeg-python>=0.2.0",
    "numpy>=2.2.0",
    "pydub>=0.25.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "tqdm>=4.67.1",
    "typer-slim>=0.15.1",
]

[project.scripts]
rvc = "rvc.core.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/rvc/__init__.py"

[tool.ruff.lint]
select = ["F", "E", "I", "N", "UP", "A", "C4", "RUF"]
ignore = ["N801", "N812"]

[dependency-groups]
dev = ["ruff>=0.8.2"]
